@@ -1,24 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>mockito-eclipse-tools</groupId>
+	<groupId>pl.greenpath.mockito</groupId>
 	<artifactId>mockito-eclipse-tools</artifactId>
 	<version>1.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
-		<tycho-version>0.15.0</tycho-version>
-		<tycho-extras-version>${tycho-version}</tycho-extras-version>
-		<tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
+		<tycho-version>0.19.0</tycho-version>
 		<m2e-core-version>1.2.0</m2e-core-version>
 		<cbi-jdt-repo.url>https://repo.eclipse.org/content/repositories/eclipse-staging/</cbi-jdt-repo.url>
 		<cbi-jdt-version>3.10.0.v20131029-1755</cbi-jdt-version>
+		<cbi-snapshots-repo.url>https://repo.eclipse.org/content/repositories/cbi-snapshots/</cbi-snapshots-repo.url>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
 		<eclipse-repo.url>https://repo.eclipse.org/content/repositories/releases/</eclipse-repo.url>
 	</properties>
 	
 	<modules>
+		<module>features/pl.greenpath.eclipse.refactoring.feature</module>
+		<module>pl.greenpath.eclipse.updatesite</module>
 		<module>plugins/pl.greenpath.mockito.ide.refactoring</module>
 		<module>plugins/pl.greenpath.mockito.ide.refactoring.tests</module>
 	</modules>
@@ -98,8 +98,6 @@
 						<includes>
 							<include>**/*Test.java</include>
 						</includes>
-						<argLine>${tycho.test.jvmArgs}</argLine>
-						<forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>
 					</configuration>
 				</plugin>
 
@@ -116,30 +114,20 @@
 
 	<pluginRepositories>
 		<pluginRepository>
-			<id>tycho</id>
-			<url>${tycho-repo.url}</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-		<pluginRepository>
 			<id>cbi-jdt</id>
 			<url>${cbi-jdt-repo.url}</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
 			</snapshots>
 		</pluginRepository>
 		<pluginRepository>
 			<id>cbi-snapshots</id>
 			<url>${cbi-snapshots-repo.url}</url>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
 			</snapshots>
 		</pluginRepository>
 		<pluginRepository>
@@ -149,7 +137,7 @@
 				<enabled>true</enabled>
 			</releases>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
